--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.16"
     compile "org.jetbrains.anko:anko-common:$anko_version"
+
+    compile 'net.sf.opencsv:opencsv:2.3'
     //    testCompile 'junit:junit:4.12'
 }
