--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
 
@@ -37,6 +37,6 @@ dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.16"
     compile "org.jetbrains.anko:anko-common:$anko_version"
 
-    compile 'net.sf.opencsv:opencsv:2.3'
+    compile group: 'com.opencsv', name: 'opencsv', version: '4.0'
     //    testCompile 'junit:junit:4.12'
 }
