Added fuzzy search. Need to iron it out a lil

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 
+    compile 'me.xdrop:fuzzywuzzy:1.1.9'
 }
 
 kotlin {
