--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
         jcenter()
         maven {
             url "https://maven.google.com"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
         google()
     }
