--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,16 @@ apply plugin: 'org.jetbrains.kotlin.android.extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "xyz.noahsc.userbenchmark"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -25,17 +26,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:multidex:1.0.3'
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
 
     // Anko Commons
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -50,24 +52,18 @@ dependencies {
 
     implementation group: 'com.opencsv', name: 'opencsv', version: '4.1'
 
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 
     implementation 'me.xdrop:fuzzywuzzy:1.1.9'
 
-    implementation 'io.arrow-kt:arrow-core:0.7.1'
-    implementation 'io.arrow-kt:arrow-syntax:0.7.1'
-    implementation 'io.arrow-kt:arrow-typeclasses:0.7.1'
-    implementation 'io.arrow-kt:arrow-data:0.7.1'
-    implementation 'io.arrow-kt:arrow-instances-core:0.7.1'
-    implementation 'io.arrow-kt:arrow-instances-data:0.7.1'
-    kapt           'io.arrow-kt:arrow-annotations-processor:0.7.1'
-}
-
-kotlin {
-    experimental {
-        coroutines 'enable'
-    }
+    implementation "io.arrow-kt:arrow-core:$arrow_version"
+    implementation "io.arrow-kt:arrow-syntax:$arrow_version"
+    implementation "io.arrow-kt:arrow-typeclasses:0.9.0"
+    implementation "io.arrow-kt:arrow-data:0.8.2"
+    implementation "io.arrow-kt:arrow-instances-core:0.8.2"
+    implementation "io.arrow-kt:arrow-instances-data:0.7.2"
+    kapt           "io.arrow-kt:arrow-annotations-processor:0.7.1"
 }
 
