--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
-    ext.anko_version = '0.10.5'
+    ext.kotlin_version = '1.3.50'
+    ext.anko_version = '0.10.8'
+    ext.arrow_version = '0.10.0'
     repositories {
         jcenter()
         google()
+        maven {
+            url "https://dl.bintray.com/kotlin/kotlin-dev/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.6.0-beta01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
